@@ -3,7 +3,7 @@
 # bin/cgi-bin/rpc.pl - soap handle
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: rpc.pl,v 1.14.6.3 2011/10/24 08:02:04 mg Exp $
+# $Id: rpc.pl,v 1.14.6.4 2011/12/20 12:25:04 mb Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU AFFERO General Public License as published by
@@ -42,11 +42,12 @@ use Kernel::System::User;
 use Kernel::System::Group;
 use Kernel::System::Queue;
 use Kernel::System::CustomerUser;
+use Kernel::System::CustomerCompany;
 use Kernel::System::Ticket;
 use Kernel::System::LinkObject;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.14.6.3 $) [1];
+$VERSION = qw($Revision: 1.14.6.4 $) [1];
 
 SOAP::Transport::HTTP::CGI->dispatch_to('Core')->handle;
 
@@ -75,16 +76,17 @@ sub Dispatch {
         LogPrefix => 'OTRS-RPC',
         %CommonObject,
     );
-    $CommonObject{MainObject}         = Kernel::System::Main->new(%CommonObject);
-    $CommonObject{DBObject}           = Kernel::System::DB->new(%CommonObject);
-    $CommonObject{PIDObject}          = Kernel::System::PID->new(%CommonObject);
-    $CommonObject{TimeObject}         = Kernel::System::Time->new(%CommonObject);
-    $CommonObject{UserObject}         = Kernel::System::User->new(%CommonObject);
-    $CommonObject{GroupObject}        = Kernel::System::Group->new(%CommonObject);
-    $CommonObject{QueueObject}        = Kernel::System::Queue->new(%CommonObject);
-    $CommonObject{CustomerUserObject} = Kernel::System::CustomerUser->new(%CommonObject);
-    $CommonObject{TicketObject}       = Kernel::System::Ticket->new(%CommonObject);
-    $CommonObject{LinkObject}         = Kernel::System::LinkObject->new(%CommonObject);
+    $CommonObject{MainObject}            = Kernel::System::Main->new(%CommonObject);
+    $CommonObject{DBObject}              = Kernel::System::DB->new(%CommonObject);
+    $CommonObject{PIDObject}             = Kernel::System::PID->new(%CommonObject);
+    $CommonObject{TimeObject}            = Kernel::System::Time->new(%CommonObject);
+    $CommonObject{UserObject}            = Kernel::System::User->new(%CommonObject);
+    $CommonObject{GroupObject}           = Kernel::System::Group->new(%CommonObject);
+    $CommonObject{QueueObject}           = Kernel::System::Queue->new(%CommonObject);
+    $CommonObject{CustomerUserObject}    = Kernel::System::CustomerUser->new(%CommonObject);
+    $CommonObject{CustomerCompanyObject} = Kernel::System::CustomerCompany->new(%CommonObject);
+    $CommonObject{TicketObject}          = Kernel::System::Ticket->new(%CommonObject);
+    $CommonObject{LinkObject}            = Kernel::System::LinkObject->new(%CommonObject);
 
     my $RequiredUser     = $CommonObject{ConfigObject}->Get('SOAP::User');
     my $RequiredPassword = $CommonObject{ConfigObject}->Get('SOAP::Password');
@@ -148,16 +150,17 @@ sub DispatchMultipleTicketMethods {
         LogPrefix => 'OTRS-RPC',
         %CommonObject,
     );
-    $CommonObject{MainObject}         = Kernel::System::Main->new(%CommonObject);
-    $CommonObject{DBObject}           = Kernel::System::DB->new(%CommonObject);
-    $CommonObject{PIDObject}          = Kernel::System::PID->new(%CommonObject);
-    $CommonObject{TimeObject}         = Kernel::System::Time->new(%CommonObject);
-    $CommonObject{UserObject}         = Kernel::System::User->new(%CommonObject);
-    $CommonObject{GroupObject}        = Kernel::System::Group->new(%CommonObject);
-    $CommonObject{QueueObject}        = Kernel::System::Queue->new(%CommonObject);
-    $CommonObject{CustomerUserObject} = Kernel::System::CustomerUser->new(%CommonObject);
-    $CommonObject{TicketObject}       = Kernel::System::Ticket->new(%CommonObject);
-    $CommonObject{LinkObject}         = Kernel::System::LinkObject->new(%CommonObject);
+    $CommonObject{MainObject}            = Kernel::System::Main->new(%CommonObject);
+    $CommonObject{DBObject}              = Kernel::System::DB->new(%CommonObject);
+    $CommonObject{PIDObject}             = Kernel::System::PID->new(%CommonObject);
+    $CommonObject{TimeObject}            = Kernel::System::Time->new(%CommonObject);
+    $CommonObject{UserObject}            = Kernel::System::User->new(%CommonObject);
+    $CommonObject{GroupObject}           = Kernel::System::Group->new(%CommonObject);
+    $CommonObject{QueueObject}           = Kernel::System::Queue->new(%CommonObject);
+    $CommonObject{CustomerUserObject}    = Kernel::System::CustomerUser->new(%CommonObject);
+    $CommonObject{CustomerCompanyObject} = Kernel::System::CustomerCompany->new(%CommonObject);
+    $CommonObject{TicketObject}          = Kernel::System::Ticket->new(%CommonObject);
+    $CommonObject{LinkObject}            = Kernel::System::LinkObject->new(%CommonObject);
 
     my $RequiredUser     = $CommonObject{ConfigObject}->Get('SOAP::User');
     my $RequiredPassword = $CommonObject{ConfigObject}->Get('SOAP::Password');
